--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,7 @@ cryptography==44.0.3
 daphne==4.1.2
 defusedxml==0.7.1
 Django==4.2.11
-django-bootstrap-icons==0.9.0
-django-bootstrap-v5==1.0.11
+djangorestframework==3.16.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
